--- a/hyprland-overrides.conf
+++ b/hyprland-overrides.conf
@@ -6,7 +6,7 @@
 # Example overrides:
 # $mainMod = SUPER
 # $terminal = uwsm app -- kitty
-$browser = omarchy-launch-browser --force-device-scale-factor=0.8
+$browser = omarchy-launch-browser --force-device-scale-factor=1
 
 # Use single default monitor (see all monitors with: hyprctl monitors)
 monitor=,preferred@144,auto,1
